# zarr-linked-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
.metaflow/RetrievalFlow/: latest_run
.metaflow/RetrievalFlow/1688115869976422/_meta/: _self.json
.metaflow/RetrievalFlow/_meta/: _self.json
manifests/: argo-minio.yaml  artifact-repositories.yaml  minio-dev.yaml
zarr_linked_data/: adf_testing.py  cat_plus_metaflow_prototype.py  cat_plus_zarr_prototype.py  consolidate_metadata_flow.py  extract_all_metadata.py  fake_data_flow.py  helpers.py  helpers_fake_data.py  helpers_synthetic_data.py  make_fake_data.py  make_synthetic_data.py  metadata_consolidate_metaflow.py  retrieval_flow.py  store_downloader.py  store_uploader.py  uri_matching.py  uri_matching_metaflow.py
zarr_linked_data/.metaflow/MetadataConsolidateFlow/: latest_run
zarr_linked_data/.metaflow/MetadataConsolidateFlow/_meta/: _self.json
zarr_linked_data/.metaflow/RetrievalFlow/: latest_run
zarr_linked_data/.metaflow/RetrievalFlow/_meta/: _self.json
zarr_linked_data/archive/: adf_testing.py  cat_plus_metaflow_prototype.py  cat_plus_no_flow_prototype.py  metadata_consolidate_metaflow.py  test_zarr_metaflow.py  uri_matching.py  uri_matching_metaflow.py  zarr_testing.py
zarr_linked_data/data/: original_data.jsonld
zarr_linked_data/data/test_store.zarr/: .all_metadata
zarr_linked_data/data/test_store.zarr/myBatch/: .zattrs
zarr_linked_data/local_dev/: metadata_consolidate_metaflow.py  uri_matching_metaflow.py
zarr_linked_data/tests/: test_dataset.py  test_zarr_metaflow.py
(+1521 files in other folders)
